fixes Archiv order on small sreens #25

--- a/css/main.css
+++ b/css/main.css
@@ -271,5 +271,6 @@ h4{
 		width: auto;
 		margin-left: auto;
 		margin-right: 2rem;
+		order: -1;
 	}
 }
